--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 
 .header__block--text {
   position: relative;
-  
+
   margin-left: 8px;
 
   color: #fff;
@@ -82,13 +82,13 @@ body {
   background-color: #3b82f6;
 
   border-radius: 4px;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .header__block--btn:hover {
-    background-color: #4a90e2;
-    
-    transition: .3s;
+  background-color: #4a90e2;
+
+  transition: 0.3s;
 }
 
 .header__block--plus {
@@ -101,100 +101,165 @@ body {
   align-self: center;
 }
 
-
 /*-------------MAIN------------*/
 
 .main__search {
-    display: flex;
+  display: flex;
 
-    align-items: center;
+  align-items: center;
 
-    width: 100%;
+  width: 100%;
 
-    margin-top: 24px;
+  margin-top: 24px;
 }
 
 .main__search--title {
-    margin-right: 24px;
+  margin-right: 24px;
 
-    font-size: 30px;
-    font-weight: 700;
+  font-size: 30px;
+  font-weight: 700;
 
-    color: #1E293B;
+  color: #1e293b;
 }
 
 .main__search--choose--btn {
-    display: flex;
-    
-    padding: 8px 12px;
-    margin-right: 12px;
+  display: flex;
 
-    font-size: 14px;
-    font-weight: 500;
+  padding: 8px 12px;
+  margin-right: 12px;
 
-    color: #3B82F6;
+  font-size: 14px;
+  font-weight: 500;
 
-    border-radius: 4px;
-    border: 1px solid #3B82F6;
+  color: #3b82f6;
 
-    transition: .2s ease-out;
+  border-radius: 4px;
+  border: 1px solid #3b82f6;
+
+  transition: 0.2s ease-out;
 }
 
 .main__search--choose--btn:hover {
-    background-color: #3B82F6;
-    
-    color: #fff;
-    transition: .2s ease-in;
+  background-color: #3b82f6;
+
+  color: #fff;
+  transition: 0.2s ease-in;
 }
 
 .main__search--choose--icon {
-    align-self: center;
+  align-self: center;
 
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .main__search--input {
-    width: 734px;
+  width: 734px;
 
-    padding: 8px 12px;
+  padding: 8px 12px;
 
-    font-size: 14px;
-    font-weight: 400;
+  font-size: 14px;
+  font-weight: 400;
 
-    color: #64748B;
+  color: #64748b;
 
-    border-radius: 4px 0 0 4px;
-    border: 1px solid #CBD5E1;
+  border-radius: 4px 0 0 4px;
+  border: 1px solid #cbd5e1;
 
-    transition: .2s ease-in;
+  transition: 0.2s ease-in;
 }
 
 .main__search--input:focus {
-    border-color: #3B82F6;
-    
-    transition: .2s ease-in;
+  border-color: #3b82f6;
+
+  transition: 0.2s ease-in;
 }
 
 .main__search--find--btn {
-    display: flex;
+  display: flex;
 
-    padding: 8px 12px;
+  padding: 8px 12px;
 
-    font-size: 14px;
-    font-weight: 500;
+  font-size: 14px;
+  font-weight: 500;
 
-    background-color: #3B82F6;
-    color: #fff;
+  background-color: #3b82f6;
+  color: #fff;
 
-    border-radius: 0 4px 4px 0;
-    border: 1px solid #3B82F6;
+  border-radius: 0 4px 4px 0;
+  border: 1px solid #3b82f6;
+
+  transition: .2s ease-out;
+}
+
+.main__search--find--btn:hover {
+  background-color: #4a90e2;
+
+  transition: .2s ease-in;
 }
 
 .main__search--find--icon {
-    margin-left: 8px;
+  margin-left: 8px;
 }
 
 .line {
-    margin-top: 24px;
-    border-bottom: 1px solid #E2E8F0;
+  margin-top: 24px;
+  margin-bottom: 32px;
+
+  border-bottom: 1px solid #e2e8f0;
+}
+
+/*---------------------RECOMMENDATIONS-------------------*/
+
+.recommendations__posts {
+  display: flex;
+  flex-wrap: wrap;
+  
+  gap: 24px;
+}
+
+.recommendations__title {
+  margin-bottom: 24px;
+
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.recommendations__post--img {
+  margin-bottom: 8px;
+}
+
+.recommendations__post--title {
+  font-size: 18px;
+  font-weight: 600;
+
+  line-height: 24px;
+
+  color: #3b82f6;
+}
+
+.recommendations__post--title:hover {
+  text-decoration: underline;
+}
+
+.recommendations__post--price {
+  font-size: 18px;
+  font-weight: 600;
+
+  line-height: 24px;
+}
+
+.recommendations__post--location {
+  font-size: 14px;
+  font-weight: 400;
+
+  color: #64748b;
+}
+
+.recommendations__post--date {
+  font-size: 14px;
+  font-weight: 400;
+
+  line-height: 24px;
+
+  color: #64748b;
 }
